test: support Android Java 8 unit compilation